--- a/tensorflow/requirements.txt
+++ b/tensorflow/requirements.txt
@@ -1,4 +1,4 @@
-imbalanced-learn==0.7.0                    
+imbalanced-learn
 matplotlib==3.3.1                       
 numpy==1.19.5                   
 optuna==2.1.0                     
