--- a/tensorflow/requirements.txt
+++ b/tensorflow/requirements.txt
@@ -1,5 +1,5 @@
 imbalanced-learn
-matplotlib==3.3.1                       
+matplotlib
 numpy==1.19.5                   
 optuna==2.1.0                     
 pandas==1.1.1           
