--- a/tensorflow/requirements.txt
+++ b/tensorflow/requirements.txt
@@ -1,12 +1,11 @@
 imbalanced-learn
 matplotlib
-numpy==1.19.5                   
-optuna==2.1.0                     
-pandas==1.1.1           
-scikit-learn==0.23.2         
-seaborn==0.11.0                  
-tabulate==0.8.7                   
-tensorflow-gpu==2.4.1                  
-tensorflow-addons==0.9.1                
-tqdm==4.48.2                
+numpy
+optuna
+pandas
+scikit-learn
+seaborn
+tensorflow-gpu
+tensorflow-addons
+tqdm
 xgboost
